--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+
 
 # Dependency directories
 node_modules/
@@ -90,3 +90,4 @@ typings/
 
 # Electron-Forge
 
+windows_build/
