Update build workflow to specify Ubuntu build for Electron app

--- a/.github/workflows/build_for_ubuntu.yml
+++ b/.github/workflows/build_for_ubuntu.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run build_front
 
       - name: Build Electron App
-        run: npm run build_deb
+        run: npm run build_app -- ubuntu_build
 
       - name: Upload .deb Artifact
         uses: actions/upload-artifact@v4
