Track large Electron binary with Git LFS

--- a/.github/workflows/build_for_ubuntu.yml
+++ b/.github/workflows/build_for_ubuntu.yml
@@ -51,10 +51,11 @@ jobs:
           git config --global user.email "actions@github.com"
 
           # Check if the .deb file exists, and if so, add and commit
-
-            git add .
-            git commit -m "Add built Electron app .deb binary"
-            git push origin main
+          git lfs install
+          git lfs track "ubuntu_build/electron"
+          git add .gitattributes ubuntu_build/electron
+          git commit -m "Track large Electron binary with Git LFS"
+          git push origin main
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
