--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ coverage
 
 # Dependency directories
 node_modules/
+!ubuntu_build/resources/node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
