--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-ubuntu_build/* filter=lfs diff=lfs merge=lfs -text
+# .gitattributes file
+
+# Track all files under the ubuntu_build/electron directory
+ubuntu_build/electron/**/* filter=lfs diff=lfs merge=lfs -text
