--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-zip": "^7.7.0",
     "concurrently": "^9.1.2",
-    "electron": "35.0.1",
     "electron-rebuild": "^3.2.9",
-    "style-loader": "^3.3.4"
-  },
-  "dependencies": {
+    "style-loader": "^3.3.4",
     "@electron-forge/maker-squirrel": "^7.7.0",
     "asar": "^3.2.0",
     "electron-squirrel-startup": "^1.0.1",
@@ -36,8 +33,11 @@
     "react": "^19.0.0",
     "react-data-stores": "^1.3.9",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1",
-    "sqlite3": "^5.1.7"
+    "react-scripts": "^5.0.1"
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.7",
+    "electron": "35.0.1"
   },
   "build": {
     "files": [
