Fix chrome-sandbox permissions in build workflow

--- a/.github/workflows/build_for_ubuntu.yml
+++ b/.github/workflows/build_for_ubuntu.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Build Electron App
         run: npm run build_app -- ubuntu_build
 
+      - name: Fix chrome-sandbox Permissions
+        run: |
+          sudo chmod 4755 ubuntu_build/chrome-sandbox
+
       - name: Archive Build Output
         run: |
           mkdir -p release
