--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "author": "itachi880 <142436626+itachi880@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-react": "^7.26.3",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-zip": "^7.7.0",
@@ -29,15 +27,17 @@
     "@electron-forge/maker-squirrel": "^7.7.0",
     "asar": "^3.2.0",
     "electron-squirrel-startup": "^1.0.1",
+    "electron": "35.0.1",
     "hls.js": "^1.5.20",
     "react": "^19.0.0",
     "react-data-stores": "^1.3.9",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-react": "^7.26.3"
   },
   "dependencies": {
-    "sqlite3": "^5.1.7",
-    "electron": "35.0.1"
+    "sqlite3": "^5.1.7"
   },
   "build": {
     "files": [
